app/assets/app.css
/* ... */
.well {
  background-image: -webkit-linear-gradient(top, #e8e8e8 0%, #f5f5f5 100%);
  background-image: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);
  background-repeat: repeat-x;
  border-color: #dcdcdc;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe8e8e8', endColorstr='#fff5f5f5', GradientType=0);
  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1);
          box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1);
}

#wrapper {
  padding-left: 250px;
  transition: all 0.4s ease 0s;
}

#page-content-wrapper.container {
  width: auto;
}

#sidebar-wrapper {
  margin-left: -250px;
  left: 250px;
  width: 250px;
  background: #000;
  position: fixed;
  height: 100%;
  overflow-y: auto;
  z-index: 1000;
  transition: all 0.4s ease 0s;
}

.sidebar-nav {
  position: absolute;
  top: 0;
  width: 250px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.sidebar-nav li {
  line-height: 40px;
  text-indent: 20px;
}

.sidebar-nav li a {
  color: #999999;
  display: block;
  text-decoration: none;
}

.sidebar-nav li a:hover {
  color: #fff;
  background: rgba(255,255,255,0.2);
  text-decoration: none;
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
  height: 65px;
  line-height: 60px;
  font-size: 18px;
}

.sidebar-nav > .sidebar-brand a {
  color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: none;
}

h3.desc {
  text-align: center;
}

/* Chart style */

line.axis {
  stroke: black;
  stroke-width: 1;
}

.serie line {
  stroke:black;
  stroke-width: 2;
}

.bar {
  fill: #6495ED;
}

.mean {
  fill: #FF69B4;
  stroke: white;
  stroke-width: 1;
}

.median {
  fill: blue;
  stroke: white;
  stroke-width: 1;
}

.tick line {
  stroke: gray;
  stroke-width:1;
}

svg text {
  font-size: 18px;
}

.y-scale text.axis-title {
  text-anchor: middle;
  font-weight: 800;
}

.median-label, .mean-label {
  text-anchor: start;
}

.median-label {
  alignment-baseline: middle;
}

.bar-label {
  text-anchor: middle;
  alignment-baseline: middle;
}

.y-scale text {
  alignment-baseline: middle;
  text-anchor: end;
}

.x-scale text {
  alignment-baseline: hanging;
  text-anchor: middle
}

@media (max-width:767px) {

  #wrapper {
    padding-left: 0;
  }

  #sidebar-wrapper {
    left: 0;
  }

  #wrapper.active {
    position: relative;
    left: 250px;
  }

  #wrapper.active #sidebar-wrapper {
    left: 250px;
    width: 250px;
    transition: all 0.4s ease 0s;
  }

  #menu-toggle {
    display: inline-block;
  }

  .inset {
    padding: 15px;
  }

}

